[package]
name = "pedersen-toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pedersen"
path = "src/main.rs"

[dependencies]
curve25519-dalek-ng = "4.1"
rand = "0.8.5"
rand_core = "0.6.3"
sha2 = "0.9"
